--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/otoloye/bc-21-TwitterSentimentAnalysis#readme",
   "dependencies": {
-    "dotenv": "^2.0.0"    
+    "dotenv": "^2.0.0",
+    "watson-developer-cloud": "^2.6.2"
   }
 }
